--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@ header{
   line-height: 50px;
   padding: 15 0 15 85;
   border-radius: 5px;
-  color: #555;
-  background-color: #6AC5AC;
+  background-color: #6C9EF8;
+  color: #333;
   z-index: 100;
 }
 
@@ -23,49 +23,74 @@ header span{
   width: 100%;
   margin-top: 100px;
   box-sizing: border-box;
+  margin-bottom: 70px;
   
 }
-.contact{
+.box{
   position: relative;
-  margin: auto 20%;
-  width: 60%;
-  border: 10px solid #6AC5AC;
+  margin: 10px;
+  border: 10px solid #6C9EF8;
   padding: 10px 10px 0px 10px;
   box-sizing: border-box;
 }
 
-.contact span{
-  font-size : 25px;
+.box span{
   position: absolute;
-  background-color: #6AC5AC;
+  background-color: #6C9EF8;
   top:0px;
   left:0px;
-  padding: 10 10 10 10px;
-  color: #555;
+  padding: 10px;
+  
+  font-size : 22px;
+  color: #333;
 
 }
 
-.contact p{
- padding: 15px 15px 0px 15px;
+.contact-form{
+  margin: auto 30%;
+  width: 40%;
+}
+
+.box p, .box div{
+ padding: 35px 15px 0px 15px;
 }
 
 .grid{
   width: 90%;
+  margin-left: 70px;
 }
   
 .grid-item{
   position: relative;
   display: inline-block;
   box-sizing: border-box;
-  background-color: #6AC5AC;
-  padding: 10px;
-  font-size: 20px;
-  margin: 7px;
-  width: 150px;
-  height: 150px;
+  background-color: #6C9EF8;
+  padding: 15px 0px;
+  margin: 8px;
+  width: 100px;
+  height: 100px;
   border-radius: 8px;
+  box-sizing: border-box;
+  
+  vertical-align: middle;
+  text-align: center;
+  font-size: 17px;
+  font-family: sans-serif;
+  
+  transition: all 0.8s ease-in ;
 }
 
+.grid-item:hover{
+  background-color: #6AC5AC;
+  color:#555;
+/*  font-size: 20px;*/
+/*  border: 3px solid #333;*/
+  
+}
+
+input:focus{
+  outline: 0px;
+}
 
 input{
   display: block;
@@ -81,11 +106,15 @@ input{
 }
 
 input[type="button"]{
-    border: 0px;
-    background-color: #6AC5AC;
-    color: #666;
-    margin-top: 30px;
-    border-radius: 5px
+  border: 0px;
+  background-color: #6C9EF8;
+  color: #333;
+  margin-top: 30px;
+  border-radius: 5px
+}
+
+input[type="button"]:active{
+  padding:20px;
 }
 
 footer{
@@ -94,19 +123,16 @@ footer{
   left:0px;
   bottom: 0px;
   width: 100%;
-  background-color: #6AC5AC;
   height: 50px;
-  color: #555;
-  
-  
+  background-color: #6C9EF8;
+
   border-radius: 5px;
   padding-top: 15px;
   font-style: oblique;
   font-size: 15px;
-  color: #555;
+  color: #333;
   text-align: center;
   box-sizing: border-box;
-  
 }
 
 
