--- a/index.css
+++ b/index.css
@@ -97,7 +97,7 @@ input{
   padding: 10px 10px;
   font-size: 25px;
   color: #151;
-  margin: 30px 10px 10px 10px;
+  margin: 20px 10px 10px 10px;
   width: 95%;
   height: 60px;
   border: 0px;
@@ -110,11 +110,16 @@ input[type="button"]{
   background-color: #6C9EF8;
   color: #333;
   margin-top: 30px;
-  border-radius: 5px
+  border-radius: 5px;
+  transition: all 0.2s ease-in;
 }
 
 input[type="button"]:active{
   padding:20px;
+}
+
+input[type="button"]:hover{
+  margin-top: 35px;
 }
 
 footer{
